<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="call_support">Написать в поддержку</string>
    <string name="user_agree">Пользовательское соглашение</string>
    <string name="https_yandex_ad">https://practicum.yandex.ru/android-developer/</string>
    <string name="email_my">baryshev964086@yandex.ru</string>
    <string name="https_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="message_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="problem_connect">Проблемы со связью\n\n Загрузка не удалась.Проверьте подключение к интернету</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="collectionName">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="create_playlist">Плейлист «BeSt SoNg EvEr!» создан</string>
    <string name="time_null">00:00</string>
    <string name="your_mediateca_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="you_didnt_create_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist_name">Название*</string>
    <string name="new_playlist_description">Описание</string>
    <string name="new_laylist_create">Создать</string>
    <string name="player_title_add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_button_add">Новый плейлист</string>
    <string name="finish_creating_a_playlist">Завершить создание плейлиста?</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="added_in_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_has_already_been_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="decline_track_11">треков</string>
    <string name="decline_track_1">трек</string>
    <string name="decline_track_2_4">трека</string>
    <string name="decline_track_default">треков</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="do_you_want_delete_playlist">Хотите удалить плейлист «%1$s»?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="playlist_is_created">Плейлист %1$s создан</string>
    <string name="no_tracks_have_been_added_to_the_playlist_yet">В плейлист еще не добавлен\n ни один трек</string>
</resources>