<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical"
    android:paddingStart="@dimen/contur_margin"
    android:paddingEnd="@dimen/contur_margin"
    tools:context="com.example.playlistmaker.ui.settings.SettingsFragment">

    <TextView
        style="@style/top_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/settings" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSwitcher"
        style="@style/settings_switch"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <FrameLayout style="@style/settings_frame">

        <TextView
            style="@style/settings_frame_text"
            android:text="@string/share" />

        <Button
            android:id="@+id/buttonShare"
            style="@style/settings_frame_button"
            app:icon="@drawable/icon_share" />
    </FrameLayout>

    <FrameLayout style="@style/settings_frame">

        <TextView
            style="@style/settings_frame_text"
            android:text="@string/call_support" />

        <Button
            android:id="@+id/buttonSupport"
            style="@style/settings_frame_button"
            app:icon="@drawable/icon_support" />
    </FrameLayout>

    <FrameLayout style="@style/settings_frame">

        <TextView
            style="@style/settings_frame_text"
            android:text="@string/user_agree" />

        <Button
            android:id="@+id/buttonAgreement"
            style="@style/settings_frame_button"
            app:icon="@drawable/icon_arrow_forward" />
    </FrameLayout>
</LinearLayout>