<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="@dimen/contur_margin"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/contur_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_search"
            app:cornerRadius="@dimen/button_radius"
            app:icon="@drawable/icon_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding_in_main"
            app:iconTint="@color/black"
            app:iconSize="@dimen/icon_size"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/button_margin_in_main"
            android:layout_marginBottom="@dimen/button_margin_in_main"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />

        <Button
            android:id="@+id/main_media"
            app:cornerRadius="@dimen/button_radius"
            app:icon="@drawable/icon_media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding_in_main"
            app:iconTint="@color/black"
            app:iconSize="@dimen/icon_size"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/button_margin_in_main"
            android:layout_marginBottom="@dimen/button_margin_in_main"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />

        <Button
            android:id="@+id/main_settings"
            app:cornerRadius="@dimen/button_radius"
            app:icon="@drawable/icon_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding_in_main"
            app:iconTint="@color/black"
            app:iconSize="@dimen/icon_size"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/button_margin_in_main"
            android:layout_marginBottom="@dimen/button_margin_in_main"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />
    </LinearLayout>
</LinearLayout>