<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical"
    android:statusBarColor="@color/color_background"
    tools:context="com.example.playlistmaker.search.ui.SearchFragment">


    <TextView
        style="@style/top_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/contur_margin"
        android:paddingEnd="@dimen/contur_margin"
        android:text="@string/search" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/contur_margin"
        android:paddingEnd="@dimen/contur_margin"
        android:paddingBottom="24dp">

        <EditText
            android:id="@+id/queryInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/icon_search"
            android:drawablePadding="8dp"
            android:fontFamily="@font/ys_text_medium"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingVertical="10dp"
            android:paddingStart="12dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/color_search_textColorHint"
            android:textCursorDrawable="@drawable/cursor"
            android:textFontWeight="400"
            android:textSize="16sp" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center"
            android:layout_margin="8dp"
            android:visibility="gone"
            app:backgroundTint="@color/ligth_gray"
            app:icon="@drawable/icon_clear"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@color/black" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/windowDisconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            style="@style/window_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/problem_top_image" />

        <TextView
            style="@style/problem_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/problem_image_text"
            android:text="@string/problem_connect" />

        <Button
            android:id="@+id/updateButton"
            style="@style/problem_update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/problem_text_button"
            android:text="@string/update" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/windowNotFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            style="@style/window_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/problem_top_image" />

        <TextView
            style="@style/problem_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/problem_image_text"
            android:text="@string/nothing_found" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/windowHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            style="@style/problem_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/history_top_text"
            android:text="@string/you_searched" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hystoryList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/history_text_recycler"
            android:layout_weight="1" />

        <Button
            android:id="@+id/clearHistoryButton"
            style="@style/problem_update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/history_recycler_button"
            android:text="@string/clear_history" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/windowTrackList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/windowProgressBar"
        android:layout_width="@dimen/progressBar_size"
        android:layout_height="@dimen/progressBar_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/top_progressBar"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />

</LinearLayout>
