<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/settings_arrow_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@color/white"
                app:backgroundTint="@color/white"
                app:icon="@drawable/icon_arrow_back"
                app:iconTint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="86dp"
                android:layout_marginBottom="12dp"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="@dimen/title" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="21dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchcompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme"
                android:textSize="@dimen/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="19dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:background="@color/white"
                app:backgroundTint="@color/white"
                app:icon="@drawable/icon_share"
                app:iconGravity="textEnd"
                app:iconTint="@color/gray" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="19dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:text="@string/call_support"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:background="@color/white"
                app:backgroundTint="@color/white"
                app:icon="@drawable/icon_support"
                app:iconGravity="textEnd"
                app:iconTint="@color/gray" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="19dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:text="@string/user_agree"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:background="@color/white"
                app:backgroundTint="@color/white"
                app:icon="@drawable/icon_arrow_forward"
                app:iconGravity="textEnd"
                app:iconPadding="12dp"
                app:iconTint="@color/gray" />
        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>