<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.playlistmaker.ui.player.PlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/contur_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/contur_margin" />

        <Button
            android:id="@+id/arrowBack"
            style="@style/button_back"
            app:icon="@drawable/icon_arrow_back"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageTrack"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_0"
            android:layout_marginStart="@dimen/element_border_8"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@id/trackName"
            app:layout_constraintEnd_toStartOf="@+id/endBorder"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/arrowBack" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/element_border_8"
            android:layout_marginEnd="@dimen/element_border_8"
            android:layout_marginBottom="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_text_medium"
            android:maxLines="1"
            android:textColor="@color/color_text"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/trackArtist"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/startBorder" />

        <TextView
            android:id="@+id/trackArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/element_border_8"
            android:layout_marginEnd="@dimen/element_border_8"
            android:layout_marginBottom="30dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_text_medium"
            android:maxLines="1"
            android:textColor="@color/color_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/playButton"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/startBorder" />

        <ImageView
            android:id="@+id/addButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginStart="@dimen/element_border_8"
            android:layout_marginBottom="75dp"
            android:src="@drawable/player_add"
            app:layout_constraintBottom_toTopOf="@id/trackTimeMillisKey"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/startBorder" />

        <ImageView
            android:id="@+id/playButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/text_gray"
            android:src="@drawable/player_play"
            app:layout_constraintBottom_toBottomOf="@id/addButton"
            app:layout_constraintEnd_toStartOf="@id/likeButton"
            app:layout_constraintStart_toEndOf="@id/addButton"
            app:layout_constraintTop_toTopOf="@id/addButton" />

        <ImageView
            android:id="@+id/likeButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginEnd="@dimen/element_border_8"
            android:src="@drawable/player_like"
            app:layout_constraintBottom_toBottomOf="@id/addButton"
            app:layout_constraintEnd_toStartOf="@id/endBorder" />

        <TextView
            android:id="@+id/currentTrackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_text_medium"
            android:gravity="center"
            android:textColor="@color/color_text"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@id/playButton"
            app:layout_constraintStart_toStartOf="@id/playButton"
            app:layout_constraintTop_toBottomOf="@+id/playButton" />

        <TextView
            android:id="@+id/countryKey"
            style="@style/mediaPlayer_property"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/player_distance_bottom_elements"
            android:text="@string/country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/startBorder" />

        <TextView
            android:id="@+id/countryValue"
            style="@style/mediaPlayer_value"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            app:layout_constraintBaseline_toBaselineOf="@id/countryKey"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/barrier" />

        <TextView
            android:id="@+id/genreKey"
            style="@style/mediaPlayer_property"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/player_distance_bottom_elements"
            android:text="@string/genre"
            app:layout_constraintBottom_toTopOf="@id/countryKey"
            app:layout_constraintStart_toEndOf="@id/startBorder" />

        <TextView
            android:id="@+id/genreValue"
            style="@style/mediaPlayer_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            app:layout_constraintBaseline_toBaselineOf="@id/genreKey"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/barrier" />

        <TextView
            android:id="@+id/yearKey"
            style="@style/mediaPlayer_property"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/player_distance_bottom_elements"
            android:text="@string/year"
            app:layout_constraintBottom_toTopOf="@id/genreKey"
            app:layout_constraintStart_toEndOf="@id/startBorder" />

        <TextView
            android:id="@+id/yearValue"
            style="@style/mediaPlayer_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintBaseline_toBaselineOf="@id/yearKey"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/barrier" />

        <TextView
            android:id="@+id/albumKey"
            style="@style/mediaPlayer_property"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/player_distance_bottom_elements"
            android:text="@string/collectionName"
            app:layout_constraintBottom_toTopOf="@id/yearKey"
            app:layout_constraintStart_toEndOf="@id/startBorder" />

        <TextView
            android:id="@+id/albumValue"
            style="@style/mediaPlayer_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            app:layout_constraintBaseline_toBaselineOf="@id/albumKey"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/barrier" />

        <TextView
            android:id="@+id/trackTimeMillisKey"
            style="@style/mediaPlayer_property"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/player_distance_bottom_elements"
            android:text="@string/duration"
            app:layout_constraintBottom_toTopOf="@id/albumKey"
            app:layout_constraintStart_toEndOf="@id/startBorder" />

        <TextView
            android:id="@+id/trackTimeMillisValue"
            style="@style/mediaPlayer_value"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintBaseline_toBaselineOf="@id/trackTimeMillisKey"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/barrier" />

        <TextView
            android:id="@+id/createPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/element_border_8"
            android:layout_marginEnd="@dimen/element_border_8"
            android:layout_marginBottom="28dp"
            android:background="@color/color_text"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/create_playlist"
            android:textColor="@color/color_background"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="currentTrackTime" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlist_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:gravity="center"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:background="@drawable/bottom_sheet_line"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_title_add_to_playlist"
            android:textColor="@color/color_text"
            android:ellipsize="end"
            android:fontFamily="@font/ys_text_regular"
            android:maxLines="1"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/createPlaylistBottomSheet"
            style="@style/problem_update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist_button_add"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="24dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/windowPlaylistsBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

